--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,16 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+.join > a {
+    display: inline-block;
+    display: -moz-inline-box;
+    *display: inline; /* For IE7 */
+    zoom: 1; /* Trigger hasLayout */
+    width: 32%;
+    text-align: center;
+}
+
+section {
+    font-size: 20px;
+}
