Add mastodon verification + font

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         {% seo %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/brands.min.css" integrity="sha512-bSncow0ApIhONbz+pNI52n0trz5fMWbgteHsonaPk42JbunIeM9ee+zTYAUP1eLPky5wP0XZ7MSLAPxKkwnlzw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -46,7 +48,7 @@
         <div class="join-gallery">
             {% for medium in site.data.social %}
             {% if medium.active == true %}
-            <a href="{{ medium.link }}" title="{{ medium.name }}">
+            <a href="{{ medium.link }}" rel="me" title="{{ medium.name }}">
                 <i class="fa fa-3x {{ medium.icon }}"></i>
             </a>
             {% endif %}
